[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://EndGameScene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.109804, 0.109804, 0.109804, 0.627451 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 0.705882 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.188235, 0.188235, 0.188235, 0.509804 )

[node name="EndGameScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 568.0
color = Color( 0.333333, 0, 0.254902, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1080.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 218.0
margin_top = 173.0
margin_right = 862.0
margin_bottom = 547.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 644.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "You Survived HCÃ˜"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 125.0
margin_right = 644.0
margin_bottom = 125.0

[node name="New Game Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 644.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "New Game"

[node name="Main Menu Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 238.0
margin_right = 644.0
margin_bottom = 291.0
focus_mode = 0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Main Menu"

[node name="Exit Game Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 644.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Exit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/New Game Button" to="." method="_on_New_Game_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Main Menu Button2" to="." method="_on_Main_Menu_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit Game Button" to="." method="_on_Exit_Game_Button_pressed"]
